2007-05-15 Don Scorgie <Don@Scorgie.org>

	* src/MainWindow.py:
	* src/Browser.py:
	Don't ellipsize text in Browser while still space available (issue #61)
	
	* src/MainWindow.py:
	Attempt to reduce "over" movement when scrolling (slightly but not a huge 
	amount better)
	
	* src/Links.py:
	Fix disappearing thoughts when links selection code fails
	(It still fails, but less so now) Partial fix for issue #62
	
	* src/MMapArea.py:
	Add initial thought navigation using arrow keys


2007-04-17 Don Scorgie <Don@Scorgie.org>

	* src/TextThought.py:
	Fix thought boundaries when using attributes
	Don't process (control) key presses when not editing
	-Later- Fix byte table rebuilding in the presence of "undecipherable" 
	characters as Python puts it.  Basically, add a try-except block to
	ensure the character is correctly tested
	

2007-04-06 Don Scorgie <Don@Scorgie.org>

	* src/MMapArea.py:
	* src/Links.py:
	Add key filtering for +/- keys to increase / decrease
	link strength (when selected)

	* src/MMapArea.py:
	* src/Links.py:
	* src/BaseThought.py:
	First pass at link selection
	Able to select links (with think rectangle drawn around them)
	BaseThought and MMapArea have minor modifications to support
	Link selection

	* src/TextThought.py:
	Update attributes properly when using the mouse
	to move the cursor

2007-04-06 Don Scorgie <Don@Scorgie.org>

	Merge of Windows-support branch:
	* Windows/COPYING.txt:
	* Windows/defs.py:
	* Windows/lab.iss:
	* Windows/labyrinth.lnk:
	* Windows/labyrinth.bat:
	* Windows/labyrinth.ico:
	* Windows/WinSetup.bat:
	* Windows/winsetup.py:
	Add files for Windows build

	* src/Browser.py:
	* src/labyrinth.py:
	* src/MainWindow.py:
	* src/TextThought.py:
	* src/utils.py:
	Various fixes required to build and run on Windows properly


2007-04-05 Don Scorgie <Don@Scorgie.org>

	* src/TextThought.py:
	Fix stupid bug to make text selection work


2007-04-05 Don Scorgie <Don@Scorgie.org>

	* src/MainWindow.py:
	* src/MMapArea.py: